组件库放到项目里，防止网络不好时请求不到在线资源

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
     <title>WebSite is Running ???</title>
 
     <!-- 引入样式 -->
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <link rel="stylesheet" href="/running/static/element-ui/theme-chalk/index.css">
 
 
 </head>
@@ -113,10 +113,10 @@
 </div>
 </body>
 
+<!-- 引入组件库 /running ！部署时需要改这里和上面的css和home.js里的prefix！-->
 <script src="/running/static/js/vue.min.js"></script>
-<!-- 引入组件库 -->
-<script src="https://unpkg.com/element-ui/lib/index.js"></script>
-<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="/running/static/element-ui/index.js"></script>
+<script src="/running/static/js/jquery.min.js"></script>
 <script src="/running/static/js/home.js"></script>
 
 </html>
